--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body style="background-color: yellow;">
     <h1>Maria Bonita Catering</h1>
-    <img src="food.jpg" style="margin-left: auto; margin-right: auto;">
+    <img src="food.jpg" style="display: block; margin-left: auto; margin-right: auto;">
     <p>Maria Bonita catering can provide excellent service and delicious food for your next event! Contact us at 1 (234) 555-6789.</p>
     <h2>Available Dishes</h2>
     <img src="tacos.jpg" style="float: left;">
