--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body style="background-color: yellow;">
-    <h1>Maria Bonita Catering</h1>
+    <h1 style="text-align: center;">Maria Bonita Catering</h1>
     <img src="food.jpg" style="display: block; margin-left: auto; margin-right: auto;">
     <p>Maria Bonita catering can provide excellent service and delicious food for your next event! Contact us at 1 (234) 555-6789.</p>
     <h2>Available Dishes</h2>
